# zero2prod

./: Cargo.toml  bacon.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  startup.rs
src/routes/: subscription.rs
tests/: health_check.rs
