[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12.15"
